# nih-reporter-mcp-server

./: .gitignore  README.md  app.yaml  pyproject.toml  start.sh
.claude/: settings.local.json
.claude/mcp-builder/: SKILL.md
.claude/mcp-builder/reference/: evaluation.md
eval/: __init__.py  badge.json  questions.csv  run_eval.py
eval/results/: eval_20260123_163750.json  eval_20260123_164143.json  eval_20260127_122000.json  eval_20260127_122954.json  eval_20260127_183301.json  eval_20260129_094859.json  eval_20260129_095848.json  eval_20260129_161811.json  eval_20260129_203810.json  eval_20260129_204710.json
scripts/: explore_api.py
src/reporter/: app.py  models.py  prompts.py  routes.py  tools.py  utils.py
